5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1635_2704.log
== TEST (2019-04-08 14:40:54) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificaca? (S/N)")
a = 10 / 100 

if (bonificacao == "S"):
	print(nota + a) 
else:
	print(nota) 
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (bonificacao == "S"):
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:41:18) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificaca? (S/N)")
a = 10 / 100 

if (bonificacao == "S"):
	print(nota + a) 
else:
	print(nota) 
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (bonificacao == "S"):
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:42:41) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificaca? (S/N)")
a = 10 / 100 

if (bonificacao == "S"):
	final = nota * (nota + a) 
	print(final)
else:
	print(nota) 
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (bonificacao == "S"):
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:43:32) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao? (S/N)")
a = 10 / 100 

if (bonificacao == "S"):
	final = nota * (nota + a) 
else:
	final = nota
	
print(final)
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (bonificacao == "S"):
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:27) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao? (S/N):")
a = 10 / 100 

if (bonificacao == "S"):
	final = nota + (nota * a) 
else:
	final = nota
	
print(float(final))
 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if (bonificacao == "S"):
NameError: name 'bonificacao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:46) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao? (S/N):")
a = 10 / 100 

if (boni == "S"):
	final = nota + (nota * a) 
else:
	final = nota
	
print(float(final))
 
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:56) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao? (S/N):")
a = 10 / 100 

if (boni == "S"):
	final = nota + (nota * a) 
else:
	final = nota
	
print(float(final))
 
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:57) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao? (S/N):")
a = 10 / 100 

if (boni == "S"):
	final = nota + (nota * a) 
else:
	final = nota
	
print(float(final))
 
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:45:06) 
-- CODE:
nota = float(input("digite a nota: "))
boni = input("bonificacao? (S/N):")
a = 10 / 100 

if (boni == "S"):
	final = nota + (nota * a) 
else:
	final = nota
	
print(float(final))
 
-- EXECUTION TIME:
0.166725
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
